// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hidden": false,
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceMins": 6000,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceMins": 9000,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 2`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane 2",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hidden": false,
  "imageUrl": null,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceMins": 6000,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceMins": 9000,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`GET /aircrafts should return all aircrafts as an admin 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hidden": false,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceMins": 282540,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 286680,
      "nextMaintenanceType": "100h",
      "reservedHours": 2,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "minsUntilNextMaintenance": -320,
      "remainingFuelLitres": 10,
      "totalTime": "4783:20",
      "usableMins": 160,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceMins": 365100,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 367800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "minsUntilNextMaintenance": 680,
      "remainingFuelLitres": 60,
      "totalTime": "6118:40",
      "usableMins": 860,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "fuelTypes": [
      "AVGAS",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/6/927368_1715977239.jpg",
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceMins": 310800,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceMins": 313800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "registration": "OH-P28",
    "seats": 4,
    "status": {
      "cautions": [],
      "daysUntilNextMaintenance": 0,
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-05-05T10:20:00.000Z",
      "minsUntilNextMaintenance": -245,
      "remainingFuelLitres": 20,
      "totalTime": "5234:05",
      "usableMins": -65,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 182,
    "yearOfManufacture": 2005,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a admin without sudo 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hidden": false,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceMins": 282540,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 286680,
      "nextMaintenanceType": "100h",
      "reservedHours": 2,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "minsUntilNextMaintenance": -320,
      "remainingFuelLitres": 10,
      "totalTime": "4783:20",
      "usableMins": 160,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceMins": 365100,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 367800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "minsUntilNextMaintenance": 680,
      "remainingFuelLitres": 60,
      "totalTime": "6118:40",
      "usableMins": 860,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a user 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hidden": false,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceMins": 282540,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 286680,
      "nextMaintenanceType": "100h",
      "reservedHours": 2,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "minsUntilNextMaintenance": -320,
      "remainingFuelLitres": 10,
      "totalTime": "4783:20",
      "usableMins": 160,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hidden": false,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceMins": 365100,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceMins": 367800,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "minsUntilNextMaintenance": 680,
      "remainingFuelLitres": 60,
      "totalTime": "6118:40",
      "usableMins": 860,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts/id Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [],
  "equipment": "SDFGY/S",
  "fuelTypes": [
    "JETA-1",
  ],
  "hidden": false,
  "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceMins": 282540,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceMins": 286680,
    "nextMaintenanceType": "100h",
    "reservedHours": 2,
    "totalPercentageHours": 10,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "registration": "OH-STL",
  "seats": 4,
  "status": {
    "cautions": [],
    "lastLandingAirport": "EFHK",
    "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
    "minsUntilNextMaintenance": -320,
    "remainingFuelLitres": 10,
    "totalTime": "4783:20",
    "usableMins": 160,
    "warnings": [],
  },
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 148,
  "yearOfManufacture": 2007,
}
`;
